Revision history for {{$dist->name}}

{{$NEXT}}
    - 

1.080_004 2016-04-26
    - XS revert for testing issues
    - Added a few extra simplistic tests
    - Turned on Travis CI testing

1.080_003 2016-04-15
    - Fixed a minor POD issue
    - required 0.003 of the Alien::GHTTP module

1.080_002 2016-04-07
    - Fixed a missing dep
    - Fixed the date of libghttp's demise to 2002
    - Updated XS code to handle refcounts better (thanks, dsteinwand)
    - Use XSLoader instead of DynaLoader
    - Added XS_VERSION for test releases

1.080_001 2016-04-07
    - Made to use Dist::Zilla
    - Require Alien::GHTTP
    - Mark as deprecated
    - Cleaned up some documentation

1.07
    - Added support for clean() and NULL return values (david Ramboz)

1.06 Thu Jan 18 2000
    - Fixed "use of uninitialized value" messages
    - Minor tweaks

1.05 Wed Jan 17 2000
    - Added *much* better LIBS/INC code
    - Added get_headers() (works with libghttp 1.08 and higher)

1.04 Sat Jan 13 2000
    - Better INC and LIBS control.
    - Added g-request to MANIFEST

1.03 Wed Jan 10 2000
    - Use gnome-config to get INC and LIB from

1.02 Thu Nov 23 2000
    - Added asynchronous mode code and documentation

1.01 Wed Nov 22 2000
    - Bug fix in returned body string (could become corrupted with >1 request)
    - Added lots more ghttp methods (allows you to POST now and much more)
    - Documentation updates

1.0  Tue Nov 21 2000
    - original version