@@ -12,33 +12,52 @@ extern "C" {
 }
 #endif
 
+typedef struct {
+    ghttp_request *ghttp;
+    SV *set_body_sv;
+} http_ghttp_class;
+
 MODULE = HTTP::GHTTP         PACKAGE = HTTP::GHTTP
 
-ghttp_request *
+PROTOTYPES: DISABLE
+
+http_ghttp_class *
 _new(CLASS)
         char * CLASS
+    PREINIT:
+        http_ghttp_class *self;
     CODE:
-        RETVAL = ghttp_request_new();
-        if (RETVAL == NULL) {
+        self = malloc( sizeof(http_ghttp_class) );
+        if ( !self ) {
+            warn("Unable to allocate http_ghttp_class");
+            XSRETURN_UNDEF;
+        }
+        self->ghttp = ghttp_request_new();
+        if ( !self->ghttp ) {
             warn("Unable to allocate ghttp_request");
             XSRETURN_UNDEF;
         }
+        self->set_body_sv = NULL;
+        RETVAL = self;
         /* sv_bless(RETVAL, gv_stash_pv(CLASS, 1)); */
     OUTPUT:
         RETVAL
 
 void
 DESTROY(self)
-        ghttp_request *self
+        http_ghttp_class *self
     CODE:
-        ghttp_request_destroy(self);
+        ghttp_request_destroy(self->ghttp);
+        if ( self->set_body_sv )
+            SvREFCNT_dec( self->set_body_sv );
+        free( self );
 
 int
 set_uri(self, uri)
-        ghttp_request *self
+        http_ghttp_class *self
         char *uri
     CODE:
-        if(ghttp_set_uri(self, uri) == ghttp_error) {
+        if(ghttp_set_uri(self->ghttp, uri) == ghttp_error) {
             XSRETURN_UNDEF;
         }
         RETVAL = 1;
@@ -47,49 +66,49 @@ set_uri(self, uri)
 
 int
 set_proxy(self, proxy)
-        ghttp_request *self
+        http_ghttp_class *self
         char *proxy
     CODE:
-        RETVAL = ghttp_set_proxy(self, proxy);
+        RETVAL = ghttp_set_proxy(self->ghttp, proxy);
     OUTPUT:
         RETVAL
 
 void
 set_header(self, hdr, val)
-        ghttp_request *self
+        http_ghttp_class *self
         const char *hdr
         const char *val
     CODE:
-        ghttp_set_header(self, hdr, val);
+        ghttp_set_header(self->ghttp, hdr, val);
 
 void
 process_request(self)
-        ghttp_request *self
+        http_ghttp_class *self
     CODE:
-        ghttp_prepare(self);
-        ghttp_process(self);
+        ghttp_prepare(self->ghttp);
+        ghttp_process(self->ghttp);
 
 void
 clean(self)
-       ghttp_request *self
+       http_ghttp_class *self
     CODE:
-       ghttp_clean(self);
+       ghttp_clean(self->ghttp);
 
 int
 prepare(self)
-        ghttp_request *self
+        http_ghttp_class *self
     CODE:
-        RETVAL = ghttp_prepare(self);
+        RETVAL = ghttp_prepare(self->ghttp);
     OUTPUT:
         RETVAL
 
 int
 process(self)
-        ghttp_request *self
+        http_ghttp_class *self
     PREINIT:
         ghttp_status process_status;
     CODE:
-        process_status = ghttp_process(self);
+        process_status = ghttp_process(self->ghttp);
         if (process_status == ghttp_error) {
             XSRETURN_UNDEF;
         }
@@ -99,10 +118,10 @@ process(self)
 
 const char*
 get_header(self, hdr)
-        ghttp_request *self
+        http_ghttp_class *self
         const char *hdr
     CODE:
-        RETVAL = ghttp_get_header(self, hdr);
+        RETVAL = ghttp_get_header(self->ghttp, hdr);
     OUTPUT:
         RETVAL
 
@@ -110,13 +129,13 @@ get_header(self, hdr)
 
 void
 get_headers(self)
-        ghttp_request *self
+        http_ghttp_class *self
     PREINIT:
         char **hdrs;
         int num_hdrs;
         int i;
     PPCODE:
-        if (ghttp_get_header_names(self, &hdrs, &num_hdrs) == -1) {
+        if (ghttp_get_header_names(self->ghttp, &hdrs, &num_hdrs) == -1) {
             XSRETURN_UNDEF;
         }
 
@@ -131,91 +150,95 @@ get_headers(self)
 
 int
 close(self)
-        ghttp_request *self
+        http_ghttp_class *self
     CODE:
-        RETVAL = ghttp_close(self);
+        RETVAL = ghttp_close(self->ghttp);
     OUTPUT:
         RETVAL
 
 SV *
 get_body(self)
-        ghttp_request *self
+        http_ghttp_class *self
     PREINIT:
         SV* buffer;
     CODE:
         buffer = newSVpvn("",0);
-        sv_catpvn(buffer, ghttp_get_body(self), ghttp_get_body_len(self));
+        sv_catpvn(buffer, ghttp_get_body(self->ghttp), ghttp_get_body_len(self->ghttp));
         RETVAL = buffer;
     OUTPUT:
         RETVAL
 
 const char *
 get_error(self)
-        ghttp_request *self
+        http_ghttp_class *self
     CODE:
-        RETVAL = ghttp_get_error(self);
+        RETVAL = ghttp_get_error(self->ghttp);
     OUTPUT:
         RETVAL
 
 int
 set_authinfo(self, user, pass)
-        ghttp_request *self
+        http_ghttp_class *self
         const char *user
         const char *pass
     CODE:
-        RETVAL = ghttp_set_authinfo(self, user, pass);
+        RETVAL = ghttp_set_authinfo(self->ghttp, user, pass);
     OUTPUT:
         RETVAL
 
 int
 set_proxy_authinfo(self, user, pass)
-        ghttp_request *self
+        http_ghttp_class *self
         const char *user
         const char *pass
     CODE:
-        RETVAL = ghttp_set_proxy_authinfo(self, user, pass);
+        RETVAL = ghttp_set_proxy_authinfo(self->ghttp, user, pass);
     OUTPUT:
         RETVAL
 
 int
 set_type(self, type)
-        ghttp_request *self
+        http_ghttp_class *self
         int type
     CODE:
-        RETVAL = ghttp_set_type(self, type);
+        RETVAL = ghttp_set_type(self->ghttp, type);
     OUTPUT:
         RETVAL
 
 int
 set_body(self, body)
-        ghttp_request *self
+        http_ghttp_class *self
         SV *body
     PREINIT:
         STRLEN len;
         char * str;
     CODE:
+        if ( self->set_body_sv )
+            SvREFCNT_dec( self->set_body_sv );
+        self->set_body_sv = body;
+        SvREFCNT_inc( body );
         str = SvPV(body, len);
-        RETVAL = ghttp_set_body(self, str, len);
+        RETVAL = ghttp_set_body(self->ghttp, str, len);
     OUTPUT:
         RETVAL
 
 int
 _get_socket(self)
-        ghttp_request *self
+        http_ghttp_class *self
     CODE:
-        RETVAL = ghttp_get_socket(self);
+        RETVAL = ghttp_get_socket(self->ghttp);
     OUTPUT:
         RETVAL
 
 void
 get_status(self)
-        ghttp_request *self
+        http_ghttp_class *self
     PREINIT:
         int code;
         const char *reason;
     PPCODE:
-        code = ghttp_status_code(self);
-        reason = ghttp_reason_phrase(self);
+        code = ghttp_status_code(self->ghttp);
+        reason = ghttp_reason_phrase(self->ghttp);
         EXTEND(SP, 2);
         PUSHs(sv_2mortal(newSViv(code)));
        if (reason == NULL)
@@ -224,11 +247,11 @@ get_status(self)
 
 void
 current_status(self)
-        ghttp_request *self
+        http_ghttp_class *self
     PREINIT:
         ghttp_current_status status;
     PPCODE:
-        status = ghttp_get_status(self);
+        status = ghttp_get_status(self->ghttp);
         EXTEND(SP, 3);
         PUSHs(sv_2mortal(newSViv(status.proc)));
         PUSHs(sv_2mortal(newSViv(status.bytes_read)));
@@ -236,18 +259,18 @@ current_status(self)
 
 int
 set_async(self)
-        ghttp_request *self
+        http_ghttp_class *self
     CODE:
-        RETVAL = ghttp_set_sync(self, ghttp_async);
+        RETVAL = ghttp_set_sync(self->ghttp, ghttp_async);
     OUTPUT:
         RETVAL
 
 void
 set_chunksize(self, size)
-        ghttp_request *self
+        http_ghttp_class *self
         int size
     CODE:
-        ghttp_set_chunksize(self, size);
+        ghttp_set_chunksize(self->ghttp, size);
 
  #
  # CONSTANTS
