@@ -69,19 +69,19 @@ stopword = perlfunc
 [RunExtraTests]
 
 [Prereqs / ConfigureRequires]
-Alien::GHTTP                = 0.003
+Alien::GHTTP                = 0.005
 
 [Prereqs]
 perl                        = 5.006
 strict                      = 0
 warnings                    = 0
+Alien::GHTTP                = 0.005
 Carp                        = 0
 Exporter                    = 0
 XSLoader                    = 0
 IO::Handle                  = 0
 
 [Prereqs / TestRequires]
-Alien::GHTTP    = 0.003
 Test::More      = 0.88
 
 [Prereqs / DevelopRequires]
