@@ -1,6 +1,6 @@
 TYPEMAP
 const char *        T_PV
-ghttp_request *     O_OBJECT
+http_ghttp_class *     O_OBJECT
 
 INPUT
 O_OBJECT
